UtahLiveDataTest/src/objects/AmendmentRequestPriorApproval__c.object
<CustomObject>
    <description>[Business] Junction object between Amendment Request and Amendment Type</description>
    <fields>
        <fullName>AmendmentRequest__c</fullName>
        <label>Amendment Request</label>
        <referenceTo>AmendmentRequest__c</referenceTo>
        <relationshipLabel>Amendment Request Prior Approvals</relationshipLabel>
        <relationshipName>Amendment_Request_Prior_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AmendmentType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Amendment Type</label>
        <referenceTo>AmendmentType__c</referenceTo>
        <relationshipLabel>Amendment Request Prior Approvals</relationshipLabel>
        <relationshipName>Amendment_Request_Prior_Approvals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideAmendmentRequestStatus__c</fullName>
        <formula>OR(ISPICKVAL(AmendmentRequest__r.Status__c,&apos;Approved&apos;),ISPICKVAL(AmendmentRequest__r.Status__c,&apos;Rejected&apos;), TEXT($User.UserType) = &apos;PowerPartner&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAmendmentRequestStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Amendment Request Prior Approval</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ARPA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendment Request Prior Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>JustificationCannotBeBlank</fullName>
        <active>true</active>
        <description>User has to provide a proper justification while making a Prior Approval on an Amendment.</description>
        <errorConditionFormula>ISBLANK(Justification__c)</errorConditionFormula>
        <errorMessage>Justification field cannot be left blank</errorMessage>
    </validationRules>
</CustomObject>